<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bank"
    android:background="@drawable/bb"
    android:orientation="vertical">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/sber"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg"
        android:textSize="36dp"
        android:textColor="@color/light_green"
        android:layout_marginLeft="90dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vvod"
        android:layout_marginTop="106dp"
        android:layout_marginLeft="55dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"/>
    <EditText
        android:textColor="@color/black"
        android:id="@+id/login"
        android:layout_marginTop="14dp"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        android:hint="@string/login"/>
    <EditText
        android:textColor="@color/black"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="41dp"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        android:hint="@string/Pas"/>
    <Button
        android:id="@+id/Register_button1"
        android:onClick="next"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/button_reg"
        android:text="@string/Enter"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"/>





</LinearLayout>