<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credit"
    android:orientation="vertical"
    android:background="@drawable/bb">

    <Button
        android:onClick="back"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/arrow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculator"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="65dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_background"
        android:layout_gravity="center"
        android:layout_marginTop="120dp">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сколько вам нужно"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/kk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:textSize="18dp"
            />
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:max="100000"
            android:min="30000" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="от 30 000"
                android:textColor="@color/black"
                android:paddingStart="10dp"/>
            <TextView
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="до 100 000"
                android:layout_marginLeft="190dp"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/date"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/wh"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/date"
        android:textSize="14dp"
        android:paddingLeft="15dp"
        android:inputType="number"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/calculate_b"
        android:onClick="calculation"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/button_reg"
        android:text="@string/Ras"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>
    
    <TextView
        android:id="@+id/answ"
        android:layout_width="161dp"
        android:layout_height="60dp"
        android:background="@drawable/wh"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/Permontch"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:textColor="@color/black"/>









</LinearLayout>